# tuple-ops

./: README.md  stack.yaml  tuple-ops.cabal
src/Data/Tuple/: Ops.hs
src/Data/Tuple/Ops/: Cons.hs  Internal.hs  Uncons.hs
