name:                       tuple-ops
version:                    0.0.0.0
category:                   Data
author:                     Jiasen Wu
maintainer:                 Jiasen Wu <jiasenwu@hotmail.com>
homepage:                   https://github.com/pierric/tuple-ops
synopsis:                   various operations on n-ary tuples via GHC.Generics
description:                Uncons operation on n-ary tuples
license:                    BSD3
build-type:                 Simple
cabal-version:              >= 1.24

Library
    hs-source-dirs:         src
    exposed-modules:        Data.Tuple.Ops
    other-modules:          Data.Tuple.Ops.Internal
                          , Data.Tuple.Ops.Uncons
    default-language:       Haskell2010
    default-extensions:     DataKinds
                          , TypeOperators
                          , KindSignatures
                          , TypeFamilies
                          , UndecidableInstances
                          , FlexibleInstances
    build-depends:          base >= 4.7 && < 5.0